--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <header class="hero-section">
         <nav class="landing-nav">
-            <div class="logo">Fundvia</div>
+            <div class="logo">ƑƲƝƊ𝕍Ɩ𐤠</div>
             <div class="nav-links">
                 <a href="login.html" class="btn btn-glass">Login</a>
                 <a href="register.html" class="btn btn-white">Join Now</a>
@@ -65,3 +65,4 @@
 
 </body>
 </html>
+
