--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
 </head>
 <body class="landing-body">
 
-    <!-- HERO SECTION -->
     <header class="hero-section">
         <nav class="landing-nav">
-            <div class="logo">ƑƲƝƊ𝕍Ɩ𐤠</div>
+            <div class="logo">Fundvia</div>
             <div class="nav-links">
                 <a href="login.html" class="btn btn-glass">Login</a>
                 <a href="register.html" class="btn btn-white">Join Now</a>
@@ -20,88 +19,49 @@
         </nav>
 
         <div class="hero-content">
-            <h1>
-                India’s Secure <br>
-                <span>Digital Wallet & Reward Platform</span>
-            </h1>
-            
-            <p class="hero-description">
-                Fundvia is a transparent digital wallet system built for users who value control and security.
-                Add funds with manual verification, monitor your wallet balance in real time,
-                earn platform-based rewards, and withdraw securely through a controlled and fraud-protected process.
-            </p>
-
-            <div class="benefits-grid">
-                <div class="benefit-tag">🛡️ Manual Deposit & Withdrawal Verification</div>
-                <div class="benefit-tag">📊 Real-Time Wallet Tracking</div>
-                <div class="benefit-tag">🎁 Performance-Based Rewards</div>
-                <div class="benefit-tag">🤝 Refer & Earn Program</div>
-            </div>
-
+            <h1>India's Most Secure <br><span>Digital Wallet System</span></h1>
+            <p>Experience manual verification, transparent rewards, and a controlled refer-and-earn system built for you.</p>
             <div class="hero-btns">
-                <a href="register.html" class="btn btn-primary-large">Create Free Account</a>
+                <a href="register.html" class="btn btn-primary-large">Get Started Today</a>
             </div>
-
-            <small class="hero-note">
-                *Fundvia does not offer fixed or guaranteed returns. All rewards are platform-based and subject to verification.
-            </small>
         </div>
     </header>
 
-    <!-- FEATURES -->
     <section class="features">
         <div class="glass-card feature-card">
             <div class="icon">🛡️</div>
             <h3>Manual Verification</h3>
-            <p>Every deposit and withdrawal is manually reviewed to maintain a secure ecosystem.</p>
+            <p>Every deposit and withdrawal is manually checked by our team for maximum security.</p>
         </div>
         <div class="glass-card feature-card">
             <div class="icon">📈</div>
-            <h3>Transparent Rewards</h3>
-            <p>Platform-based reward structure with full visibility and no hidden conditions.</p>
+            <h3>5% Reward Plans</h3>
+            <p>Choose between 45 or 90 days plans and earn performance-based rewards.</p>
         </div>
         <div class="glass-card feature-card">
             <div class="icon">🤝</div>
             <h3>Refer & Earn</h3>
-            <p>Invite friends and earn referral rewards after their first approved transaction.</p>
+            <p>Invite friends and get ₹100 reward automatically after their first approved deposit.</p>
         </div>
     </section>
 
-    <!-- ACTIVITY SNAPSHOT -->
     <section class="activity-snapshot">
-       <div class="activity-scroll-wrapper">
-    <ul class="activity-scroll">
-        <li>👤 User A — Rewards credited ₹2,350</li>
-        <li>👤 User B — Rewards credited ₹4,120</li>
-        <li>👤 User C — Rewards credited ₹1,890</li>
-        <li>👤 User D — Rewards credited ₹3,760</li>
-        <li>👤 User E — Rewards credited ₹2,640</li>
-        <li>👤 User F — Rewards credited ₹1,520</li>
-        <li>👤 User G — Rewards credited ₹3,980</li>
-        <li>👤 User H — Rewards credited ₹2,110</li>
-        <li>👤 User I — Rewards credited ₹4,450</li>
-        <li>👤 User J — Rewards credited ₹1,760</li>
-
-        <!-- DUPLICATE SAME LIST FOR SMOOTH LOOP -->
-        <li>👤 User A — Rewards credited ₹2,350</li>
-        <li>👤 User B — Rewards credited ₹4,120</li>
-        <li>👤 User C — Rewards credited ₹1,890</li>
-        <li>👤 User D — Rewards credited ₹3,760</li>
-        <li>👤 User E — Rewards credited ₹2,640</li>
-        <li>👤 User F — Rewards credited ₹1,520</li>
-        <li>👤 User G — Rewards credited ₹3,980</li>
-        <li>👤 User H — Rewards credited ₹2,110</li>
-        <li>👤 User I — Rewards credited ₹4,450</li>
-        <li>👤 User J — Rewards credited ₹1,760</li>
-    </ul>
-</div>
-
+        <div class="glass-card">
+            <h2>Community Activity Highlights</h2>
+            <p>Some recent platform activity snapshots</p>
+            <ul class="activity-list">
+                <li>👤 User A — Platform rewards: ₹2,350</li>
+                <li>👤 User B — Platform rewards: ₹4,120</li>
+                <li>👤 User C — Platform rewards: ₹1,890</li>
+                <li>👤 User D — Platform rewards: ₹3,760</li>
+            </ul>
+            <small>*Figures shown are illustrative and represent platform activity, not guaranteed earnings.</small>
+        </div>
     </section>
 
-    <!-- PAGE BASE TEXT (CENTER BOTTOM) -->
-    <div class="page-base-text">
-        © 2026 Fundvia. Built for transparency and long-term scalability.
-    </div>
+    <footer class="landing-footer">
+        <p>© 2026 Fundvia. Build for transparency and long-term scalability.</p>
+    </footer>
 
 </body>
 </html>
